[package]
name = "wind-tuiche"
version.workspace = true
repository.workspace = true
edition.workspace = true
description = "TUIC over QUIC using the tokio-quiche backend"
license = "MIT OR Apache-2.0"

[features]
default = ["server", "client"]
# The server both decodes client requests and encodes UDP response datagrams,
# so it needs both codec directions; the client (outbound) needs encode.
server = ["tuic-core/decode", "tuic-core/encode"]
client = ["tuic-core/encode"]

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core", default-features = false }

# Shared backend-agnostic TUIC protocol codecs + fragment state machine.
tuic-core = { version = "0.1.1", path = "../tuic-core", default-features = false }

# Async
tokio = { version = "1", default-features = false, features = ["net", "time", "rt", "sync", "io-util", "macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Utilities
arc-swap = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
eyre = "0.6"
tracing = "0.1"
thiserror = "2"

# The tokio-quiche backend is **64-bit only**: tokio-quiche's GSO path
# (`quic/io/gso.rs`) transmutes `u128` -> `std::time::Instant`, which only
# compiles where `Instant` is 16 bytes. On 32-bit targets this crate compiles to
# just the backend-agnostic re-exports (`proto`, `udp`) so the workspace still
# builds; the actual QUIC backend is gated out (see `lib.rs`).
[target.'cfg(target_pointer_width = "64")'.dependencies]
# Pinned to 0.18 because 0.19 bumped its `serde_with` requirement to ^3.20,
# which conflicts with `qlog 0.17` (pulled in via the Tipuch quinn fork's
# `qlog` feature) that pins `serde_with` to ~3.17. tokio-quiche 0.18 also pins
# ~3.17, so the two unify. 0.18 additionally tracks `quiche ^0.28`.
tokio-quiche = "0.18"
# Direct access to the BoringSSL `SSL` object behind the quiche connection for
# the RFC 5705 keying-material exporter used by TUIC authentication.
boring = { version = "4", default-features = false }
boring-sys = { version = "4", default-features = false }
# Provides `ForeignTypeRef::as_ptr` for the FFI exporter call.
foreign-types-shared = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
