[package]
name = "datagram-socket"
version = "0.8.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Utilities for working with datagram sockets"

[dependencies]
bytes = "1"
futures-util = "0.3"
libc = "0.2"
smallvec = "1"
tokio = { version = "1", features = ["net", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
